--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a href="#">화물취급소</a>
                     </li><!-- .depth01 end -->
                     <li class="depth01">
-                        <a href="#">편의시설</a> 
+                        <a href="#">편의시설</a>
                     </li><!-- .depth01 end -->
                     <li class="depth01">
                         <a href="#">고객의소리</a>
@@ -126,7 +126,7 @@
                 <h3>찾아오는 길</h3>
                 <!-- * 카카오맵 - 지도퍼가기 -->
                 <!-- 1. 지도 노드 -->
-                <div id="daumRoughmapContainer1698205250424" class="root_daum_roughmap root_daum_roughmap_landing">
+                <div id="daumRoughmapContainer1698656112000" class="root_daum_roughmap root_daum_roughmap_landing">
                 </div>
 
                 <!--
@@ -139,10 +139,10 @@
                 <!-- 3. 실행 스크립트 -->
                 <script charset="UTF-8">
                     new daum.roughmap.Lander({
-                        "timestamp": "1698205250424",
-                        "key": "2gkga",
-                        "mapWidth": "1690",
-                        "mapHeight": "717"
+                        "timestamp": "1698656112000",
+                        "key": "2gn9t",
+                        "mapWidth": "1440",
+                        "mapHeight": "700"
                     }).render();
                 </script>
             </div><!-- .map end -->
